--- a/index.html
+++ b/index.html
@@ -4,12 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Calando</title>
+    <link rel="stylesheet" href="css/estilos.css">
+    <title>Bedu Travels</title>
 </head>
 <body>
-    <nav>
-        
-    </nav>
+    <header>
+        <div>
+            <img src="images/bedu_logo.png" height="40"
+            alt="Bedu logo">
+        </div>
+        <div>
+            <ol>
+                <li>
+                    <a class="link-menu" href="#">Sign-in</a>
+                </li>
+                <li>
+                    <a class="link-menu" href="#">Sign-up</a>
+                </li>
+            </ol>
+        </div>
+    </header>
     
 </body>
 </html>
