--- a/index.html
+++ b/index.html
@@ -20,10 +20,26 @@
                 </li>
                 <li>
                     <a class="link-menu" href="#">Sign-up</a>
+                    
                 </li>
             </ol>
         </div>
     </header>
+
+    <section class="hero">
+        <div>
+            <div>
+                <h1>Bedu Travels</h1>
+            </div>
+            <div>
+                <h2>Texto Importante mas largo</h2>
+            </div>
+            <div class="buscador">
+                <input type="text"><button type="button">Click Me!</button>
+            </div>
+        </div>
+    </section>
+
     
 </body>
 </html>
