ciudades ya agregadas

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/estilos.css">
+    <script src="https://kit.fontawesome.com/2ca9f9c648.js" crossorigin="anonymous"></script><link rel="stylesheet" href="https://kit-free.fontawesome.com/releases/latest/css/free.min.css" media="all"><link rel="stylesheet" href="https://kit-free.fontawesome.com/releases/latest/css/free-v4-font-face.min.css" media="all"><link rel="stylesheet" href="https://kit-free.fontawesome.com/releases/latest/css/free-v4-shims.min.css" media="all">
     <title>Bedu Travels</title>
 </head>
 <body>
@@ -40,6 +41,74 @@
         </div>
     </section>
 
+    <section class="iconos">
+        <div>
+            <i class="fas fa-plane" aria-hidden="true"></i>
+        </div>
+        <div>
+            <i class="fas fa-bus-alt" aria-hidden="true"></i>
+        </div>
+        <div>
+            <i class="fas fa-glass-martini-alt" aria-hidden="true"></i>
+        </div>
+    </section>
+
+    <section class="mundo">
+        <div class="ciudades">
+            <div>
+                <img src="images/angeles.jpeg" alt="">
+                <p>Los Angeles</p>
+            </div>
+            <div>
+                <img src="images/argentina.jpg" alt="">
+                <p>Argentina</p>
+            </div>
+            <div>
+                <img src="images/brasil.jpg" alt="">
+                <p>Brasil</p>
+            </div>
+            <div>
+                <img src="images/cdmx.jpeg" alt="">
+                <p>Ciudad de Mexico</p>
+            </div>
+            <div>
+                <img src="images/colombia.jpg" alt="">
+                <p>Colombia</p>
+            </div>
+            <div>
+                <img src="images/dubai.jpeg" alt="">
+                <p>Dubai</p>
+            </div>
+            <div>
+                <img src="images/francia.jpg" alt="">
+                <p>Francia</p>
+            </div>
+            <div>
+                <img src="images/gdl.jpeg" alt="">
+                <p>Guadalajara</p>
+            </div>
+            <div>
+                <img src="images/panama.jpg" alt="">
+                <p>Panama</p>
+            </div>
+            <div>
+                <img src="images/tj.jpg" alt="">
+                <p>Tj</p>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <div>
+
+
+        </div>
+        <div>
+            <img src="images/facebook.svg" alt="">
+            <img src="images/instagram.svg" alt="">
+            <img src="images/twitter.svg" alt="">
+        </div>
+    </footer>
     
 </body>
 </html>
