--- a/index.html
+++ b/index.html
@@ -100,13 +100,12 @@
 
     <footer>
         <div>
-
-
+            <p>Bedu@bedutravels.com</p>
         </div>
         <div>
-            <img src="images/facebook.svg" alt="">
-            <img src="images/instagram.svg" alt="">
-            <img src="images/twitter.svg" alt="">
+            <a href="https://www.facebook.com/" target="_blank"><img src="images/facebook.svg" height="50" alt=""></a>
+            <a href="https://www.instagram.com/" target="_blank"><img src="images/instagram.svg" height="50" alt=""></a>
+            <a href="https://twitter.com/"><img src="images/twitter.svg" height="50" alt=""></a>
         </div>
     </footer>
     
