--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://kit.fontawesome.com/2ca9f9c648.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/estilos.css">
-    <script src="https://kit.fontawesome.com/2ca9f9c648.js" crossorigin="anonymous"></script><link rel="stylesheet" href="https://kit-free.fontawesome.com/releases/latest/css/free.min.css" media="all"><link rel="stylesheet" href="https://kit-free.fontawesome.com/releases/latest/css/free-v4-font-face.min.css" media="all"><link rel="stylesheet" href="https://kit-free.fontawesome.com/releases/latest/css/free-v4-shims.min.css" media="all">
+    <script src="js/comportamiento.js"></script>
+    <link rel="stylesheet" href="https://kit-free.fontawesome.com/releases/latest/css/free.min.css" media="all">
+    <link rel="stylesheet" href="https://kit-free.fontawesome.com/releases/latest/css/free-v4-font-face.min.css" media="all">
+    <link rel="stylesheet" href="https://kit-free.fontawesome.com/releases/latest/css/free-v4-shims.min.css" media="all">
     <title>Bedu Travels</title>
 </head>
 <body>
@@ -51,6 +56,10 @@
         <div>
             <i class="fas fa-glass-martini-alt" aria-hidden="true"></i>
         </div>
+    </section>
+
+    <section class="boton">
+        <button type="button" id="mostrar">Mostrar Destinos</button>
     </section>
 
     <section class="mundo">
