--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <h1>Bedu Travels</h1>
             </div>
             <div>
-                <h2>Texto Importante mas largo</h2>
+                <h2>Viaja a donde quieras</h2>
             </div>
             <div class="buscador">
                 <input type="text"><button type="button">Click Me!</button>
