mejorado la sangria

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,15 +10,17 @@
     <link rel="stylesheet" href="css/estilos.css">
     <script src="js/comportamiento.js"></script>
     <link rel="stylesheet" href="https://kit-free.fontawesome.com/releases/latest/css/free.min.css" media="all">
-    <link rel="stylesheet" href="https://kit-free.fontawesome.com/releases/latest/css/free-v4-font-face.min.css" media="all">
-    <link rel="stylesheet" href="https://kit-free.fontawesome.com/releases/latest/css/free-v4-shims.min.css" media="all">
+    <link rel="stylesheet" href="https://kit-free.fontawesome.com/releases/latest/css/free-v4-font-face.min.css"
+        media="all">
+    <link rel="stylesheet" href="https://kit-free.fontawesome.com/releases/latest/css/free-v4-shims.min.css"
+        media="all">
     <title>Bedu Travels</title>
 </head>
+
 <body>
     <header>
         <div>
-            <img src="images/bedu_logo.png" height="40"
-            alt="Bedu logo">
+            <img src="images/bedu_logo.png" height="40" alt="Bedu logo">
         </div>
         <div>
             <ol>
@@ -26,7 +29,7 @@
                 </li>
                 <li>
                     <a class="link-menu" href="#">Sign-up</a>
-                    
+
                 </li>
             </ol>
         </div>
@@ -117,6 +120,7 @@
             <a href="https://twitter.com/"><img src="images/twitter.svg" height="50" alt=""></a>
         </div>
     </footer>
-    
+
 </body>
+
 </html>
