imagen al boton

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
                 <h2>Viaja a donde quieras</h2>
             </div>
             <div class="buscador">
-                <input type="text"><button type="button">Click Me!</button>
+                <input type="text"><button type="button"><i class="fas fa-check-square"></i>
+                </button>
             </div>
         </div>
     </section>
